Make banding optional
